--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "@types/node": "^16.18.68",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "@yudiel/react-qr-scanner": "^1.2.6",
     "axios": "^1.6.2",
+    "html2canvas": "^1.4.1",
+    "number-to-words": "^1.2.4",
     "react": "^18.2.0",
     "react-avatar-editor": "^13.0.2",
     "react-dom": "^18.2.0",
+    "react-qrcode-logo": "^2.9.0",
     "react-router-dom": "^6.21.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
@@ -44,6 +48,7 @@
     ]
   },
   "devDependencies": {
+    "@types/number-to-words": "^1.2.3",
     "@types/react-avatar-editor": "^13.0.2",
     "tailwindcss": "^3.3.6"
   }
